--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/hasseboulen/wlogga-types#readme",
   "dependencies": {
+    "@material-ui/pickers": "^3.2.10",
     "@types/mongoose": "^5.7.21",
     "@types/node": "^14.0.6",
     "moment": "^2.26.0",
